--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,7 @@ generational-box = { path = "packages/generational-box" }
 dioxus-hot-reload = { path = "packages/hot-reload", version = "0.4.0" }
 dioxus-fullstack = { path = "packages/fullstack", version = "0.4.1"  }
 dioxus_server_macro = { path = "packages/server-macro", version = "0.4.1" }
+manganis = { git = "https://github.com/DioxusLabs/collect-assets" }
 tracing = "0.1.37"
 tracing-futures = "0.2.5"
 tokio = "1.28"
