--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "packages/extension",
     "packages/router",
     "packages/html",
+    "packages/html-extra",
     "packages/html-internal-macro",
     "packages/hooks",
     "packages/web",
@@ -60,8 +61,8 @@ dioxus-core = { path = "packages/core", version = "0.4.2" }
 dioxus-core-macro = { path = "packages/core-macro", version = "0.4.0"  }
 dioxus-router = { path = "packages/router", version = "0.4.1"  }
 dioxus-router-macro = { path = "packages/router-macro", version = "0.4.1" }
-dioxus-html = { path = "packages/html", version = "0.4.0"  }
-dioxus-html-internal-macro = { path = "packages/html-internal-macro", version = "0.4.0"  }
+dioxus-html = { path = "packages/html", version = "0.4.0" }
+dioxus-html-internal-macro = { path = "packages/html-internal-macro", version = "0.4.0" }
 dioxus-hooks = { path = "packages/hooks", version = "0.4.0" }
 dioxus-web = { path = "packages/web", version = "0.4.0"  }
 dioxus-ssr = { path = "packages/ssr", version = "0.4.0"  }
