--- a/examples/openid_connect_demo/Cargo.toml
+++ b/examples/openid_connect_demo/Cargo.toml
@@ -22,3 +22,4 @@ serde_json = "1.0.105"
 thiserror = "1.0.48"
 uuid = "1.4"
 web-sys = { version = "0.3", features = ["Request", "Document"] }
+anyhow = "1.0.75"
