--- a/packages/cli-plugin/examples/plugin/Cargo.toml
+++ b/packages/cli-plugin/examples/plugin/Cargo.toml
@@ -10,3 +10,4 @@ crate-type = ["cdylib"]
 
 [dependencies]
 dioxus-cli-plugin = { path = "../.." }
+wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen" }
