--- a/packages/cli-plugin/Cargo.toml
+++ b/packages/cli-plugin/Cargo.toml
@@ -16,6 +16,8 @@ wit-bindgen = "0.15.0"
 [dev-dependencies]
 wasmtime = { version = "15.0.0", features = ['component-model'] }
 wasmtime-wasi = { version = "15.0.0", features = ['preview2'] }
-wit-component = "0.18.2"
+wit-component = "0.19.0"
+slab = "0.4.9"
+# toml = "0.8.8"
 async-trait = "0.1.73"
 tokio = { workspace = true, features = ["full"] }
