--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -63,6 +63,12 @@ ctrlc = "3.2.3"
 open = "4.1.0"
 cargo-generate = "0.18"
 toml_edit = "0.19.11"
+wasmtime = { version = "15.0.0", features = ['component-model'] }
+wasmtime-wasi = { version = "15.0.0", features = ['preview2'] }
+wit-component = "0.19.0"
+slab = "0.4.9"
+# toml = "0.8.8"
+async-trait = "0.1.73"
 
 # bundling
 tauri-bundler = { version = "=1.3.0", features = ["native-tls-vendored"] }
@@ -79,7 +85,6 @@ interprocess-docfix = { version = "1.2.2" }
 
 [features]
 default = []
-plugin = []
 
 [[bin]]
 path = "src/main.rs"
