--- a/packages/cli/src/assets/dioxus.toml
+++ b/packages/cli/src/assets/dioxus.toml
@@ -14,16 +14,17 @@ out_dir = "dist"
 # resource (static) file folder
 asset_dir = "public"
 
+[watcher]
+
+index_on_404 = true
+
+watch_path = ["src", "examples"]
+
 [web.app]
 
 # HTML title tag content
 title = "Dioxus | An elegant GUI library for Rust"
 
-[web.watcher]
-
-index_on_404 = true
-
-watch_path = ["src", "examples"]
 
 # include `assets` in web platform
 [web.resource]
