--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -81,7 +81,7 @@ rsx-rosetta = { workspace = true }
 dioxus-rsx = { workspace = true }
 dioxus-html = { workspace = true, features = ["hot-reload-context"] }
 dioxus-core = { workspace = true, features = ["serialize"] }
-dioxus-hot-reload = { workspace = true }
+dioxus-hot-reload = { workspace = true, features = ["file_watcher"] }
 interprocess-docfix = { version = "1.2.2" }
 
 [features]
