--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -35,6 +35,9 @@ dioxus-ssr = { workspace = true, optional = true }
 hyper = { version = "0.14.25", optional = true }
 http = { version = "0.2.9", optional = true }
 
+# Islands
+dioxus-core-macro = { workspace = true, optional = true }
+
 # Web Integration
 dioxus-web = { workspace = true, features = ["hydrate"], optional = true }
 
@@ -79,9 +82,10 @@ desktop = ["dioxus-desktop"]
 warp = ["dep:warp", "ssr"]
 axum = ["dep:axum", "tower-http", "ssr"]
 salvo = ["dep:salvo", "ssr"]
-ssr = ["server_fn/ssr", "dioxus_server_macro/ssr", "tokio", "tokio-util", "dioxus-ssr", "tower", "hyper", "http", "http-body", "dioxus-router/ssr", "tokio-stream"]
+ssr = ["server_fn/ssr", "dioxus_server_macro/ssr", "tokio", "tokio-util", "dioxus-ssr", "tower", "hyper", "http", "http-body", "dioxus-router/ssr", "tokio-stream", "dioxus-core-macro?/ssr"]
 default-tls = ["server_fn/default-tls"]
 rustls = ["server_fn/rustls"]
+islands = ["dioxus-core-macro"]
 
 [dev-dependencies]
 dioxus-fullstack = { path = ".", features = ["router"] }
