--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -11,8 +11,8 @@ keywords = ["ui", "gui", "react", "ssr", "fullstack"]
 
 [dependencies]
 # server functions
-server_fns = { git = "https://github.com/gbj/server_fns", features = ["json", "url", "browser"], default-features = false }
-server_fn_macro_default = { git = "https://github.com/gbj/server_fns" }
+server_fns = { git = "https://github.com/gbj/server_fns", branch = "re-export-frameworks", features = ["json", "url", "browser"], default-features = false }
+server_fn_macro_default = { git = "https://github.com/gbj/server_fns", branch = "re-export-frameworks" }
 
 # warp
 warp = { version = "0.3.5", features = ["compression-gzip"], optional = true }
@@ -21,7 +21,6 @@ http-body-util = { version = "0.1.0", optional = true }
 # axum
 axum = { version = "0.7.3", features = ["ws", "macros"], optional = true }
 tower-http = { version = "0.5", optional = true, features = ["fs", "compression-gzip"] }
-axum-macros = "0.3.7"
 
 # salvo
 salvo = { version = "0.63.1", optional = true, features = ["serve-static", "websocket", "compression"] }
@@ -30,7 +29,7 @@ serde = "1.0.159"
 # Dioxus + SSR
 dioxus = { workspace = true }
 dioxus-ssr = { workspace = true, optional = true }
-http = { version = "1", optional = true }
+http = { version = "1.0", optional = true }
 
 # Web Integration
 dioxus-web = { workspace = true, features = ["hydrate"], optional = true }
@@ -70,7 +69,7 @@ dioxus-hot-reload = { workspace = true }
 web-sys = { version = "0.3.61", features = ["Window", "Document", "Element", "HtmlDocument", "Storage", "console"] }
 
 [features]
-default = ["hot-reload", "default-tls"]
+default = ["hot-reload"]
 router = ["dioxus-router"]
 hot-reload = ["serde_json", "futures-util"]
 web = ["dioxus-web"]
