--- a/packages/fullstack/examples/axum-streaming/Cargo.toml
+++ b/packages/fullstack/examples/axum-streaming/Cargo.toml
@@ -15,7 +15,7 @@ tracing-wasm = "0.2.1"
 tracing.workspace = true
 tracing-subscriber = "0.3.17"
 futures = "0.3.30"
-rphi = { version = "0.1", optional = true }
+kalosm-llama = { version = "0.1", optional = true }
 tokio = { workspace = true, optional = true }
 futures-util.workspace = true
 tokio-stream = { version = "0.1.14", optional = true }
@@ -23,5 +23,5 @@ once_cell = "1.19.0"
 
 [features]
 default = []
-ssr = ["dioxus-fullstack/axum", "rphi", "tokio", "tokio-stream"]
+ssr = ["dioxus-fullstack/axum", "kalosm-llama", "tokio", "tokio-stream"]
 web = ["dioxus-fullstack/web"]
