--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "packages/cli",
     "packages/cli-plugin",
     "packages/cli-plugin/examples/plugin",
+    "packages/cli-plugin/examples/dx-parcel-minifier",
     "packages/core-macro",
     "packages/router-macro",
     "packages/extension",
