--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -55,7 +55,6 @@ flate2 = "1.0.22"
 tar = "0.4.38"
 zip = "0.6.2"
 tower = "0.4.12"
-syn = { version = "2.0", features = ["full", "extra-traits"] }
 lazy_static = "1.4.0"
 
 # plugin packages
@@ -65,7 +64,6 @@ cargo-generate = "0.18"
 toml_edit = "0.21.0"
 wasmtime = { version = "15.0.0", features = ['component-model'] }
 wasmtime-wasi = { version = "15.0.0", features = ['preview2'] }
-wit-component = "0.19.0"
 slab = "0.4.9"
 # toml = "0.8.8"
 async-trait = "0.1.73"
@@ -84,6 +82,7 @@ dioxus-hot-reload = { workspace = true }
 interprocess-docfix = { version = "1.2.2" }
 semver = "1.0.20"
 gitignore = "1.0.8"
+base64 = "0.21.5"
 
 [features]
 default = []
