--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -23,7 +23,7 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 toml = "0.8.8"
 fs_extra = "1.2.0"
-# cargo_toml = "0.18.0"
+cargo_toml = "0.18.0"
 futures-util = { workspace = true }
 notify = { version = "5.0.0-pre.16", features = ["serde"] }
 html_parser  = { workspace = true }
