--- a/packages/fullstack/examples/cloudflare-workers-hello-world/Cargo.toml
+++ b/packages/fullstack/examples/cloudflare-workers-hello-world/Cargo.toml
@@ -37,8 +37,9 @@ tracing = { workspace = true }
 tracing-subscriber = { version = "0.3.17", features = ["time"] }
 console_error_panic_hook = "0.1.7"
 reqwest = "0.11.18"
+rust-embed = { version = "8.2.0", features = ["debug-embed", "include-exclude"], optional = true }
 
 [features]
 default = []
-server = ["dioxus/cloudflare-workers", "worker"]
+server = ["dioxus/cloudflare-workers", "worker", "rust-embed"]
 web = ["dioxus-web"]
