--- a/packages/ssr/Cargo.toml
+++ b/packages/ssr/Cargo.toml
@@ -20,6 +20,7 @@ tracing = { workspace = true }
 http = "0.2.9"
 async-trait = "0.1.58"
 serde_json = { version = "1.0" }
+web-time = "1.0.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 tokio = { version = "1.28", features = ["io-util"], optional = true }
