--- a/packages/fullstack/examples/cloudflare-workers-hello-world/package.json
+++ b/packages/fullstack/examples/cloudflare-workers-hello-world/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "wrangler pages dev --compatibility-date 2024-01-29 --proxy 8080 --script-path dist/_worker.js -- dx serve --platform web --features web",
-    "build:server": "cargo install -q worker-build && worker-build --dev --features server && ncp build/ dist"
+    "postinstall": "dx build --platform web --features web --skip-assets",
+    "serve": "wrangler pages dev --compatibility-date 2024-01-29 --proxy 8080 --script-path dist/worker/shim.mjs -- dx serve --platform web --features web",
+    "build:server": "cargo install -q worker-build && worker-build --features server && ncp build/ dist"
   },
   "author": "",
   "license": "ISC",
