--- a/packages/liveview/Cargo.toml
+++ b/packages/liveview/Cargo.toml
@@ -24,7 +24,7 @@ serde = { version = "1.0.151", features = ["derive"] }
 serde_json = "1.0.91"
 dioxus-html = { workspace = true, features = ["serialize", "eval", "mounted"] }
 rustc-hash = { workspace = true }
-dioxus-core = { workspace = true, features = ["serialize", "drop-virtual-dom"] }
+dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-interpreter-js = { workspace = true, features = ["binary-protocol"] }
 dioxus-hot-reload = { workspace = true, optional = true }
 dioxus-cli-config = { workspace = true, features = ["read-config"] }
