--- a/packages/fullstack/examples/hackernews/Cargo.toml
+++ b/packages/fullstack/examples/hackernews/Cargo.toml
@@ -11,6 +11,9 @@ dioxus = { workspace = true, features = ["fullstack", "router", "minimal"], defa
 chrono = { version = "0.4.38", features = ["serde"] }
 reqwest = { version = "0.12.4", features = ["json"] }
 serde = { version = "1.0.203", features = ["derive"] }
+tracing-wasm = "0.2.1"
+tracing = { workspace = true }
+tracing-subscriber = "0.3.17"
 
 [features]
 default = []
