--- a/packages/ssr/Cargo.toml
+++ b/packages/ssr/Cargo.toml
@@ -38,6 +38,7 @@ tokio = { version = "1.28", features = ["fs", "io-util"], optional = true }
 [dev-dependencies]
 dioxus = { workspace = true }
 dioxus-signals = { workspace = true }
+tokio = { version = "1", features = ["full"] }
 
 tracing = { workspace = true }
 fern = { version = "0.6.0", features = ["colored"] }
