--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -30,11 +30,11 @@ manganis = { workspace = true, default-features = false, optional = true }
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
 tracing-fluent-assertions = "0.3.0"
-# dioxus = { workspace = true }
-# dioxus-html = { workspace = true, features = ["serialize"] }
+dioxus = { workspace = true }
+dioxus-html = { workspace = true, features = ["serialize"] }
 pretty_assertions = "1.3.0"
 rand = "0.8.5"
-# dioxus-ssr = { workspace = true }
+dioxus-ssr = { workspace = true }
 reqwest = { workspace = true}
 tracing-subscriber = "0.3.18"
 
