--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -2,7 +2,7 @@
     "name": "dioxus",
     "displayName": "Dioxus",
     "description": "Useful tools for working with Dioxus",
-    "version": "0.5.1",
+    "version": "0.6.0-alpha.2",
     "publisher": "DioxusLabs",
     "private": true,
     "license": "MIT",
