--- a/Cargo.toml
+++ b/Cargo.toml
@@ -183,6 +183,7 @@ documentation = "https://dioxuslabs.com"
 keywords = ["dom", "ui", "gui", "react", "wasm"]
 rust-version = "1.79.0"
 publish = false
+version = "0.6.0-alpha.2"
 
 [dependencies]
 manganis = { workspace = true, optional = true }
